# QSOVault

./: .gitignore  Cargo.toml
src/: main.rs
src/modules/: contact_table_widget.rs  database_interface.rs  datatypes.rs  db_interface.rs  mod.rs
src/widgets/: contact_table_widget.rs  insert_contact_widget.rs  mod.rs
