[package]
name = "qso-vault"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.22.0"
egui_extras = "0.22.0"
eframe = "0.22.0"
#rusqlite = { version = "0.29.0", features = ["bundled"] }
#diesel = { version = "2.1.0", features = ["sqlite"] }
chrono = "0.4.26"
serde = "1.0.164"
surrealdb = { version = "1.0.0-beta.10", features = ["kv-rocksdb"] }
tokio = { version = "1.28.2", features = ["rt", "rt-multi-thread"] }
log = "0.4.19"
env_logger = "0.10.0"
